--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -561,11 +561,11 @@ button a{
     .divfooter {
       width: 60%;
       height: auto;
+      gap: 20px 20px;
       display: flex;
       justify-content: space-around;
       align-items: center;
       flex-direction: row;
-      flex-wrap: wrap;
-    
+      flex-wrap: wrap;    
     }
 
