--- a/NotAuthorized/styleLocation.css
+++ b/NotAuthorized/styleLocation.css
@@ -194,7 +194,7 @@
   width: 60%;
   height: auto;
   display: flex;
-  gap: 20px;
+  gap: 20px 20px;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
