--- a/Tarla/catalog.css
+++ b/Tarla/catalog.css
@@ -214,7 +214,7 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  gap: 20px;
+  gap: 20px 20px;
   flex-wrap: wrap;
 }
 @media screen and (max-width: 900px) {
