--- a/effects.css
+++ b/effects.css
@@ -44,9 +44,10 @@
 .header {
   position: fixed;
   top: 0;
+  left: 0;
   z-index: 1000;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  width: 96%;
+  width: 100%;
   height: 70px;
   background: #f6ddcadc;
   display: flex;
@@ -54,7 +55,7 @@
   padding: 10px 0px;
   flex-direction: row;
   justify-content: flex-start;
-  gap: 16px;
+  gap: 10px;
 }
 
 .mainText {
