--- a/Function/effects.css
+++ b/Function/effects.css
@@ -38,7 +38,7 @@
 }
 
 .link:hover {
-  font-size: 1.1em;
+  font-size: 1.05em;
 }
 
 .header {
@@ -57,6 +57,12 @@
   justify-content: flex-start;
   gap: 10px;
 }
+.logo{
+  margin-left: 0px;
+}
+.hamburg{
+  margin: 5px;
+  }
 
 .mainText {
   transition: transform 0.3s ease;
