--- a/NotAuthorized/style.css
+++ b/NotAuthorized/style.css
@@ -6,6 +6,7 @@
   text-decoration: none;
   list-style: none;
   cursor: none;
+  color: black;
   font-family: "DM Sans";
   font-size: 16px;
   font-style: normal;
@@ -18,6 +19,7 @@
   list-style-type: none;
 }
 .base {
+  background: #f5ede7;
   max-width: 1440px;
   display: flex;
   margin-top: 80px;
@@ -122,6 +124,7 @@
   left: 0;
 }
 .section1 {
+  background:  #ffc3a0;
   width: 96.4%;
   height: auto;
   display: flex;
@@ -514,6 +517,8 @@
   justify-content: center;
   flex-shrink: 0;
   border-radius: 10px;
+  border: 1px solid #000;
+  background: rgba(255, 255, 255, 0.25);
   text-align: center;
   font-family: Roboto;
   font-size: 17px;
@@ -542,7 +547,7 @@
   gap: 10px;
 }
 .divfooter {
-  width: 60%;
+  width: 70%;
   height: auto;
   display: flex;
   justify-content: space-around;
