--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -42,7 +42,9 @@ button a{
   gap: 16px;
   visibility: visible;
 }
-
+.logo{
+  margin-left: 0px;
+}
 
 .hamburger-menu {
   visibility: hidden;
@@ -158,6 +160,7 @@ button a{
   font-family: "Roboto";
   font-size: 18px;
   font-style: normal;
+  margin-left: 0;
   font-weight: 400;
   line-height: 28.008px; /* 155.6% */
 }
@@ -176,6 +179,11 @@ button a{
 .button1 {
   width: 310px;
   height: 59px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -184,7 +192,7 @@ button a{
   line-height: 34.002px; /* 154.553% */
   border-radius: 35px;
   background: none;
-  margin-left: 20px;
+  margin-left: 0px;
 }
 .section2 {
   width: 98%;
@@ -255,8 +263,13 @@ button a{
   line-height: 28.008px; /* 155.6% */
 }
 .button2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 310px;
   height: 59px;
+  text-decoration: none;
+  color: black;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -352,6 +365,10 @@ button a{
 .button4 {
   width: 257px;
   height: 58px;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  margin-left: 0;
   flex-shrink: 0;
   border-radius: 35px;
   text-align: center;
